Fix #31734: Edge slide operator Flip/Even options not working

Issue was caused by wrong check whether transform is in edge slide mode.